# taiko-ratingpro-v1

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.py
deploy/ubuntu/: deploy.sh  gunicorn.conf.py  nginx-api-allowlist.conf  nginx-taiko-rating.conf  taiko-rating.service
docs/: architecture.md  dimensions.md  extending.md
docs/agent/: README.md  agent-context.md  api-contract.md  deploy-ops.md  engine-flow.md  frontend-contract.md  project-map.md  task-checklist.md
examples/: sample_easy.tja  sample_hard.tja  sample_minimal.tja
src/taiko_rating/: __init__.py  api.py  cli.py  engine.py
src/taiko_rating/aggregation/: __init__.py  target_difficulty.py
src/taiko_rating/analysis/: __init__.py  window_analysis.py
src/taiko_rating/dimensions/: __init__.py  accuracy_pressure.py  base.py  miss_penalty.py  peak_pressure.py  reading_complexity.py  rhythm_complexity.py  sustained_pressure.py  technique_complexity.py
src/taiko_rating/explanation/: __init__.py  explainer.py
src/taiko_rating/features/: __init__.py  note_features.py
src/taiko_rating/models/: __init__.py  chart.py  enums.py  result.py
src/taiko_rating/normalization/: __init__.py  normalizer.py
src/taiko_rating/parsers/: __init__.py  tja_parser.py
tests/: conftest.py  test_aggregation.py  test_dimensions.py  test_engine.py  test_features.py  test_models.py  test_tja_parser.py
webui/: index.html  package-lock.json  package.json  vite.config.js
webui/src/: App.vue  style.css
webui/src/components/: DimensionChart.vue  FileUpload.vue  HotspotList.vue  (+2 more)
