[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taiko-ratingpro"
version = "0.1.0"
description = "太鼓达人谱面多维难度评定系统"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
web = ["flask>=3.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
taiko-rating = "taiko_rating.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
